<resources>
    <string name="app_name">Sunshine</string>
    <string name="boton">boton</string>
    <string name="ENVIAR">ENVIAR</string>
    <string name="Nombre_de_usuario">Nombre de Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Repita_Contraseña">Repita Contraseña</string>
    <string name="titulo_login">Titulo login</string>
    <string name="Bienvenido">Bienvenido</string>
</resources>
