<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logo"
        android:background="@drawable/logo"
        android:layout_width="130dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_height="100dp" />
    <TextView
        android:text="@string/titulo_login"
        android:id="@+id/titulo_login"
        android:layout_marginTop="140dp"
        android:textStyle="bold"
        android:textColor="@color/background_boton"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_boton">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ENVIAR"
            android:textColor="@color/blanco"
            android:layout_centerInParent="true"
            android:background="@color/background_boton"
            android:layout_margin="10dp"
            android:id="@+id/button_enviar"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/nombre_login"
        android:layout_width="match_parent"
        android:background="@color/gris_edit"
        android:layout_marginTop="200dp"
        android:hint="@string/Nombre_de_usuario"
        android:gravity="center_vertical"
        android:layout_height="30dp" />
    <EditText
        android:id="@+id/contraseña_login"
        android:layout_width="match_parent"
        android:background="@color/gris_edit"
        android:layout_marginTop="240dp"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:hint="@string/Contraseña"
        android:layout_height="30dp" />
    <EditText
        android:id="@+id/repetir_contraseña_login"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:background="@color/gris_edit"
        android:layout_marginTop="280dp"
        android:hint="@string/Repita_Contraseña"
        android:gravity="center_vertical"
        android:layout_height="30dp" />

</RelativeLayout>


